--- a/playbook.yml
+++ b/playbook.yml
@@ -9,37 +9,37 @@
   ignore_errors: yes
   roles:
     - facts
-    - packer
-    - cleanup
+#     - packer
+#     - cleanup
 
-- name: configure system
-  hosts: newvm
-  remote_user: ansible
-  become: yes
-  vars_files:
-    - vars.yml
-  roles:
-    - createAdminUser
-    - installPackages
-    - disableUFW
-    - configureHostname
-    - configureBash
-    - configureOpenVMTools
-    - configurePostfix
-    - configureCockpit
-    - configureNetwork
-    - configureResolveD
-    - configureSudoers
-    - configureSSH
-    - configureVIM
-    - removeLv
-    - reboot
+# - name: configure system
+#   hosts: newvm
+#   remote_user: ansible
+#   become: yes
+#   vars_files:
+#     - vars.yml
+#   roles:
+#     - createAdminUser
+#     - installPackages
+#     - disableUFW
+#     - configureHostname
+#     - configureBash
+#     - configureOpenVMTools
+#     - configurePostfix
+#     - configureCockpit
+#     - configureNetwork
+#     - configureResolveD
+#     - configureSudoers
+#     - configureSSH
+#     - configureVIM
+#     - removeLv
+#     - reboot
 
-- name: "templates are bad for your health"
-  hosts: hypervisor
-  vars_files:
-    - /root/ansibleroles/vars.yml
-  remote_user: root
-  roles:
-    - sharedfacts
-    - tweakVMinfo
+# - name: "templates are bad for your health"
+#   hosts: hypervisor
+#   vars_files:
+#     - /root/ansibleroles/vars.yml
+#   remote_user: root
+#   roles:
+#     - sharedfacts
+#     - tweakVMinfo
