--- a/packer/tasks/main.yml
+++ b/packer/tasks/main.yml
@@ -7,36 +7,36 @@
     dest: /var/www/html/user-data
   when: defdistro == 'ubuntu'
 
-- name: custom preseed 
-  ansible.builtin.template:
-    src: /home/user-ansible/ansibleroles/packer/templates/preseed.cfg.j2
-    dest: /var/www/html/preseed.cfg
-  when: defdistro == 'debian'
+# - name: custom preseed 
+#   ansible.builtin.template:
+#     src: /home/user-ansible/ansibleroles/packer/templates/preseed.cfg.j2
+#     dest: /var/www/html/preseed.cfg
+#   when: defdistro == 'debian'
 
-- name: touch meta-data
-  ansible.builtin.file:
-    path: /var/www/html/meta-data
-    state: touch
-  when: defdistro == 'ubuntu'
+# - name: touch meta-data
+#   ansible.builtin.file:
+#     path: /var/www/html/meta-data
+#     state: touch
+#   when: defdistro == 'ubuntu'
 
-- name: custom script
-  ansible.builtin.template:
-    src: /home/user-ansible/ansibleroles/packer/templates/script.sh.j2
-    dest: /home/user-ansible/ansibleroles/packer/files/script.sh
-  when: defdistro == 'debian' or defdistro == 'ubuntu'
+# - name: custom script
+#   ansible.builtin.template:
+#     src: /home/user-ansible/ansibleroles/packer/templates/script.sh.j2
+#     dest: /home/user-ansible/ansibleroles/packer/files/script.sh
+#   when: defdistro == 'debian' or defdistro == 'ubuntu'
 
-- name: custom packer builder
-  ansible.builtin.template:
-    src: "/home/user-ansible/ansibleroles/packer/templates/packerVM{{ defdistro }}.pkr.hcl.j2"
-    dest: "/home/user-ansible/ansibleroles/packer/files/packerVM{{ defdistro }}.pkr.hcl"
-    owner: user-ansible
-    group: user-ansible 
-    mode: '0600'
+# - name: custom packer builder
+#   ansible.builtin.template:
+#     src: "/home/user-ansible/ansibleroles/packer/templates/packerVM{{ defdistro }}.pkr.hcl.j2"
+#     dest: "/home/user-ansible/ansibleroles/packer/files/packerVM{{ defdistro }}.pkr.hcl"
+#     owner: user-ansible
+#     group: user-ansible 
+#     mode: '0600'
 
-- name: "packer shell commands"
-  ansible.builtin.command: "/usr/bin/packer build -on-error=abort /home/user-ansible/ansibleroles/packer/files/packerVM{{ defdistro }}.pkr.hcl"
+# - name: "packer shell commands"
+#   ansible.builtin.command: "/usr/bin/packer build -on-error=abort /home/user-ansible/ansibleroles/packer/files/packerVM{{ defdistro }}.pkr.hcl"
 
-- name: Sleep for 30 seconds and continue with play
-  ansible.builtin.wait_for: 
-    timeout: 30
+# - name: Sleep for 30 seconds and continue with play
+#   ansible.builtin.wait_for: 
+#     timeout: 30
 
