--- a/packer/tasks/main.yml
+++ b/packer/tasks/main.yml
@@ -19,11 +19,11 @@
     state: touch
   when: defdistro == 'ubuntu'
 
-# - name: custom script
-#   ansible.builtin.template:
-#     src: /home/user-ansible/ansibleroles/packer/templates/script.sh.j2
-#     dest: /home/user-ansible/ansibleroles/packer/files/script.sh
-#   when: defdistro == 'debian' or defdistro == 'ubuntu'
+- name: custom script
+  ansible.builtin.template:
+    src: /home/user-ansible/ansibleroles/packer/templates/script.sh.j2
+    dest: /home/user-ansible/ansibleroles/packer/files/script.sh
+  when: defdistro == 'debian' or defdistro == 'ubuntu'
 
 # - name: custom packer builder
 #   ansible.builtin.template:
