--- a/cleanup/tasks/main.yml
+++ b/cleanup/tasks/main.yml
@@ -3,23 +3,23 @@
 
 - name: remove custom packerfile
   ansible.builtin.file:
-    path: /root/ansibleroles/packer/files/packerVM{{ distroiso }}.pkr.hcl
+    path: /home/user-ansible/ansibleroles/packer/files/packerVM{{ distroiso }}.pkr.hcl
     state: absent
 
-- name: remove custom user-data
-  ansible.builtin.file:
-    path: /var/www/html/user-data
-    state: absent
+# - name: remove custom user-data
+#   ansible.builtin.file:
+#     path: /var/www/html/user-data
+#     state: absent
 
 - name: remove custom meta-data
   ansible.builtin.file:
     path: /var/www/html/meta-data
     state: absent
 
-- name: remove custom preseed.cfg
-  ansible.builtin.file:
-    path: /var/www/html/preseed.cfg
-    state: absent
+# - name: remove custom preseed.cfg
+#   ansible.builtin.file:
+#     path: /var/www/html/preseed.cfg
+#     state: absent
 
 - name: remove custom script
   ansible.builtin.file:
