--- a/playbook.yml
+++ b/playbook.yml
@@ -12,15 +12,15 @@
     - packer
     - cleanup
 
-# - name: configure system
-#   hosts: ubuntu-auto-inst
-#   remote_user: user-ansible
-#   become: yes
-#   vars_files:
-#     - /home/user-ansible/ansibleroles/vars.yml
-#   roles:
-#     - createAdminUser
-#     - installPackages
+- name: configure system
+  hosts: ubuntu-auto-inst
+  remote_user: user-ansible
+  become: yes
+  vars_files:
+    - /home/user-ansible/ansibleroles/vars.yml
+  roles:
+    - createAdminUser
+    - installPackages
 #     - disableUFW
 #     - configureHostname
 #     - configureBash
