--- a/playbook.yml
+++ b/playbook.yml
@@ -14,7 +14,7 @@
 
 - name: configure system
   hosts: ubuntu-auto-inst
-  remote_user: user-ansible
+  remote_user: amad
   become: yes
   vars_files:
     - /home/user-ansible/ansibleroles/vars.yml
